[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Themes/buttoncanvasoptiontheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Themes/Titlemenuaddition.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/WordRecognizedPopUp.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/arial_narrow_7.ttf" type="DynamicFontData" id=4]

[sub_resource type="Shader" id=21]
code = "shader_type canvas_item;

uniform vec4 topleft:hint_color;
uniform vec4 topright:hint_color;
uniform vec4 bottomleft:hint_color;
uniform vec4 bottomright:hint_color;

void fragment() {
	vec2 uv_corner = vec3(UV, 0.0).xy;
	vec4 top = mix(topleft, topright, uv_corner.x);
	vec4 bottom = mix(bottomleft, bottomright, uv_corner.x);
	COLOR =  mix(top, bottom, uv_corner.y);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 21 )
shader_param/topleft = Color( 0.47451, 0.843137, 0.988235, 1 )
shader_param/topright = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomleft = Color( 1, 0.968627, 0.478431, 1 )
shader_param/bottomright = Color( 0.627451, 0.807843, 0.827451, 1 )

[sub_resource type="ShaderMaterial" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.807843, 0.0823529, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=13]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.619608, 0.443137, 0.796078, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.388235, 0.396078, 0.713726, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.611765, 0.917647, 0.988235, 1 )

[sub_resource type="DynamicFont" id=14]
size = 70
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.619608, 0.443137, 0.796078, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.388235, 0.396078, 0.713726, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.611765, 0.917647, 0.988235, 1 )

[sub_resource type="DynamicFont" id=15]
size = 92
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=16]

[sub_resource type="DynamicFont" id=20]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )

[node name="PopUpMotConfirmation" type="Control"]
rect_scale = Vector2( 0.4, 0.4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="Panel" parent="."]
material = SubResource( 2 )
margin_right = 1019.0
margin_bottom = 451.0

[node name="exitButton" type="Button" parent="."]
material = SubResource( 3 )
margin_left = 934.0
margin_top = 4.0
margin_right = 1010.0
margin_bottom = 79.0
theme = ExtResource( 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "X"

[node name="okButton" type="Button" parent="."]
margin_left = 120.0
margin_top = 328.0
margin_right = 470.0
margin_bottom = 413.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "OK"

[node name="modifyButton" type="Button" parent="."]
margin_left = 547.5
margin_top = 328.0
margin_right = 932.5
margin_bottom = 413.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = " MODIFIER"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 257.5
margin_top = 32.5
margin_right = 877.5
margin_bottom = 237.5
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 15 )
text = "Mot Reconnu : 
"

[node name="Mot" type="RichTextLabel" parent="."]
margin_left = 238.0
margin_top = 163.0
margin_right = 786.0
margin_bottom = 298.0
theme = SubResource( 16 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 20 )
custom_styles/normal = SubResource( 18 )
visible_characters = 200

[connection signal="pressed" from="exitButton" to="." method="_on_exitButton_pressed"]
[connection signal="pressed" from="okButton" to="." method="_on_okButton_pressed"]
[connection signal="pressed" from="modifyButton" to="." method="_on_modifyButton_pressed"]
